[gd_scene load_steps=4 format=3 uid="uid://bqnquycwh0avb"]

[ext_resource type="Script" path="res://resources/cmd/script/chat.gd" id="1_3yftv"]
[ext_resource type="Texture2D" uid="uid://dce0khwxybbb0" path="res://Texture/hud/chat.png" id="2_docqt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_13mrp"]
bg_color = Color(0.27451, 0.27451, 0.27451, 1)

[node name="Chat" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3yftv")

[node name="Panel" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0666667, 0.0666667, 0.0666667, 0.768627)

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.92284
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = -1
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 55

[node name="TextEdit" type="LineEdit" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.894118, 0.894118, 0.894118, 1)
theme_override_colors/font_selected_color = Color(0.705882, 0.705882, 0.705882, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_13mrp")
placeholder_text = "..."
deselect_on_focus_loss_enabled = false

[node name="ColorRect" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 44.0
grow_horizontal = 2
color = Color(0.470588, 0.470588, 0.470588, 1)

[node name="Close" type="TextureButton" parent="Panel"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -65.0
offset_right = -20.0
offset_bottom = 45.0
grow_horizontal = 0
focus_mode = 0
texture_normal = ExtResource("2_docqt")
ignore_texture_size = true
stretch_mode = 5

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
custom_minimum_size = Vector2(1152, 554)
layout_mode = 0
anchor_top = 0.0679012
anchor_right = 1.0
anchor_bottom = 0.92284
horizontal_scroll_mode = 0
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
custom_minimum_size = Vector2(1152, 554)
layout_mode = 2

[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
[connection signal="gui_input" from="Panel/HBoxContainer/TextEdit" to="." method="_on_text_edit_gui_input"]
[connection signal="text_submitted" from="Panel/HBoxContainer/TextEdit" to="." method="_on_text_edit_text_submit"]
[connection signal="pressed" from="Panel/Close" to="." method="_on_close_pressed"]
